--- a/DemoEFApplication/appsettings.json
+++ b/DemoEFApplication/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyDbConnection": "Data source=X570; Initial Catalog=EfTestDb; integrated security = True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
